--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-        <div id="motdeviner"></div>
-
         <input id="input">
         <button id="bouton">Afficher</button>
-        <div id="lettretaper"></div>
-
+        <div id="lettretaper">Lettres déja utiliser : </div>
+        <div id="bonneLettres"></div>
+        <div id="essais">Nombres d'essais :</div>
+        <div id="motdeviner">Mot à deviner : </div>
 <script src="app.js"></script>
 </body>
-</html>
+<html>
